<resources>
    <string name="no_data">No Data</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_error">there is no such recipe name</string>
    <string name="recipe_details_preview">this is the recipes details, some text to test the appearance of
        the view It\'s time for a truly uncompromising smartphone. One that was designed and
        manufactured by technical enthusiasts - in close coordination with the future users. A
        smartphone that perfectly combines fascinating technology, groundbreaking design and
        breakthrough innovation. It is time for the OnePlus 3. But do not rely on our word. Convince
        yourself.
    </string>
    <string name="recipe_title_preview">this is the recipe name</string>
    <string name="recipe">Recipes</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data,please try again!</string>
    <string name="refresh">refresh</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_recipes">Recipes</string>
    <string name="title_activity_recipe_details">Recipe Details</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >4 characters</string>
    <string name="invalid_username_and_password">please check your username and password</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="test_password">ahmed</string>
    <string name="test_email">ahmed@ahmed.ahmed</string>
    <string name="app_name">WC 2022 Qatar Schedule, Scores</string>
    <string name="home">Home</string>
    <string name="tables">Tables</string>
    <string name="video_wc">Video WC</string>
    <string name="wc_fun">WC Fun</string>
    <string name="history">Statistics</string>
    <string name="group_a">Group A</string>
    <string name="match">Match</string>
    <string name="fifa_world_cup_2022">FIFA World Cup 2022</string>
    <string name="time">23:00</string>
    <string name="netherlands">Netherlands</string>
    <string name="sun_nov_20">Sun Nov 20</string>
    <string name="ai_bay_stadium">AI Bay stadium</string>
    <string name="head_to_head">Head-to-Head</string>
    <string name="played">Played</string>
    <string name="wins">Wins</string>
    <string name="predict_the_outcome_of_the_match">Predict the outcome of the match</string>
    <string name="enter_your_prediction">Enter your prediction</string>
    <string name="who_will_win"> Who will win?</string>
    <string name="netherlands_vs_ecuador">Netherlands vs Ecuador:</string>
    <string name="details">Details</string>
    <string name="team">Team</string>
    <string name="location">Location</string>
    <string name="capacity">Capacity</string>
    <string name="opened">Opened</string>
    <string name="other_stadiums">Other stadiums</string>
    <string name="group_details">Group details</string>
    <string name="simulation_sound">Simulation sound</string>
    <string name="back">Back</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="search_highlights">Search highlights</string>
    <string name="save">Save</string>
    <string name="loading">Loading...</string>
    <string name="success">Success</string>
    <string name="no_highlight_videos_found">No highlight videos found</string>
    <string name="prediction_rate">Prediction rate</string>
    <string name="no_match_prediction_history_found">No match prediction history found</string>
    <string name="guess">Guess</string>
    <string name="full_time">Full time</string>
    <string name="predicted_number_of_matches_empty">Predicted number of matches: %s</string>
    <string name="number_of_correct_guesses_empty">Number of correct guesses: %s</string>
    <string name="number_of_wrong_guesses_empty">Number of wrong guesses: %s</string>
    <string name="odds_of_guessing_correctly_empty">Odds of guessing correctly: %s</string>
    <string name="empty">Empty</string>
    <string name="default_notification_channel_id">notification_id_101</string>
    <string name="ad">AD</string>
    <string name="watch_ads_to_unlock">Watch ads to unlock</string>
</resources>
